[package]
name = "nuclear_candy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
secp256k1 = { version = "0.20.3", features = ["rand"] }
tokio = { version= "1", features = ["full"] }
web3 = "0.17.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tiny-keccak = { version = "1.4" }
rayon = "1.8.0"
num_cpus = "1.13.0"
bip39 = "2.0.0"
indicatif = "0.17.8"
